Fixing jump on mobile when filter is selected

--- a/apps/zbugs/src/index.css
+++ b/apps/zbugs/src/index.css
@@ -1596,7 +1596,7 @@ textarea.autoResize {
 
   .add-filter-modal {
     position: fixed;
-    top: 50%;
+    top: max(10rem, 50%);
     left: 50%;
     transform: translate(-50%, -50%);
   }
